--- a/src/app/admin/features/channel_setting/_Dialogue/BULK OPERATION/bulkpackageupdation/bulkpackageupdation.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/BULK OPERATION/bulkpackageupdation/bulkpackageupdation.component.html
@@ -126,7 +126,7 @@
                 <div class="Head1 d-flex justify-content-between align-items-center" style="padding: 1rem;">
                     <h6>CUSTOMER DETAILS</h6>
                 </div>
-                <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class"
+                <ag-grid-angular #agGrid  domLayout='autoHeight' class="ag-theme-alpine table-class"
                     rowAnimation [gridOptions]="gridOptions" [columnDefs]="columnDefs" [rowData]="rowData"
                     [enableCellTextSelection]="true">
                 </ag-grid-angular>
@@ -135,7 +135,7 @@
                 <div class="Head1 d-flex justify-content-between align-items-center" style="padding: 1rem;">
                     <h6>BILLING DETAILS</h6>
                 </div>
-                <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class"
+                <ag-grid-angular #agGrid  domLayout='autoHeight' class="ag-theme-alpine table-class"
                     rowAnimation [gridOptions]="gridOptions" [columnDefs]="columnDefs1" [rowData]="rowData1"
                     [enableCellTextSelection]="true">
                 </ag-grid-angular>
